k8s/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: my-web-app
   labels:
      app: my-web-app
spec:
   replicas: 1
   selector:
      matchLabels:
         app: my-web-app
   template:
      metadata:
         labels:
            app: my-web-app
      spec:
         containers:
            - name: my-web-app
              image: hemanthtadikonda/my-app
              ports:
                 - containerPort: 8501
              resources:
                 requests:
                    memory: "128Mi"
                    cpu: "250m"
                 limits:
                    memory: "128Mi"
                    cpu: "500m"
