k8s/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
   name: my-web-app
   labels:
      app: my-web-app
spec:
   type: ClusterIP
   selector:
      app: my-web-app
   ports:
      - protocol: TCP
        port: 80
        targetPort: 8501
