k8s/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: my-web-app
   annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
   ingressClassName: nginx
   rules:
      - host: "hemanth.tadikonda.site"
        http:
           paths:
              - pathType: Prefix
                path: "/"
                backend:
                   service:
                      name: my-web-app
                      port:
                         number: 80
